# qpsk-b210

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
include/ltp_cla/: config.h  convergence_layer_adapter.h  logging.h  ltp_engine.h  ltp_segment.h  ltp_session.h  reception_tracker.h  sdnv.h  tcp_egress.h  tcp_ingress.h  timer_manager.h
include/qpsk_b200/: b200_interface.h  carrier_sync.h  decoder.h  encoder.h  fec.h  frame.h  frame_sync.h  pulse_shaper.h  spsc_queue.h  symbol_mapper.h  tcp_input_server.h  tcp_output_server.h  timing_recovery.h  types.h  udp_input.h  udp_output.h
ion_test/: run_test.sh
ion_test/loopback/: host1.bprc  host1.ionrc  host1.ipnrc  run_loopback.sh
ion_test/node1/: node1.bprc  node1.ionrc  node1.ipnrc
ion_test/node2/: node2.bprc  node2.ionrc  node2.ipnrc
ion_test/two_node/: README.md  nodeA.bprc  nodeA.ionrc  nodeA.ipnrc  nodeA.ltprc  nodeB.bprc  nodeB.ionrc  nodeB.ipnrc  nodeB.ltprc  start_nodeA.sh  start_nodeB.sh
src/: CMakeLists.txt  b200_interface.cpp  carrier_sync.cpp  config.cpp  decoder.cpp  encoder.cpp  fec_decoder.cpp  fec_encoder.cpp  frame_builder.cpp  frame_parser.cpp  frame_sync.cpp  main.cpp  pulse_shaper.cpp  symbol_mapper.cpp  tcp_input_server.cpp  tcp_output_server.cpp  timing_recovery.cpp  udp_input.cpp  udp_output.cpp
src/ltp_cla/: CMakeLists.txt  config.cpp  convergence_layer_adapter.cpp  ltp_engine.cpp  ltp_segment.cpp  main.cpp  reception_tracker.cpp  sdnv.cpp  tcp_egress.cpp  tcp_ingress.cpp  timer_manager.cpp
tests/: CMakeLists.txt
tests/integration/: test_b200_config.cpp  test_ber_performance.cpp  test_full_pipeline.cpp  test_ltp_edge_cases.cpp  test_ltp_end_to_end.cpp  test_ltp_real_world.cpp  test_ltp_reliable_loss.cpp  test_tcp_multi_client.cpp
tests/property/: test_carrier_sync_props.cpp  test_cla_framing_props.cpp  test_codec_roundtrip_props.cpp  test_config_props.cpp  test_fec_props.cpp  test_frame_props.cpp  test_ltp_cla_config_props.cpp  test_ltp_engine_props.cpp  test_ltp_segment_props.cpp  test_pulse_shaper_props.cpp  test_reception_tracker_props.cpp  test_sdnv_props.cpp  test_symbol_mapper_props.cpp  test_tcp_props.cpp  test_timing_recovery_props.cpp
tests/unit/: test_b200_interface.cpp  test_carrier_sync.cpp  test_cla.cpp  test_config_json.cpp  test_config_validate.cpp  test_encoder_decoder.cpp  test_fec.cpp  test_frame.cpp  test_ltp_cla_config.cpp  test_ltp_engine.cpp  test_ltp_segment.cpp  test_ltp_session.cpp  test_pulse_shaper.cpp  test_reception_tracker.cpp  test_sdnv.cpp  test_spsc_queue.cpp  test_symbol_mapper.cpp  test_tcp_egress.cpp  test_tcp_ingress.cpp  test_tcp_servers.cpp  test_timer_manager.cpp  test_timing_recovery.cpp  test_types.cpp
